css linked in layout.pug

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html(lang="en")
     head
         meta(charset="UTF-8")
         title ${title} | Test Website
+        link(rel="stylesheet", href="/css/style.css")
     body 
         header.header
             .header__content-wrapper
@@ -15,4 +16,3 @@ html(lang="en")
             .footer__content-wrapper
                 .footer__copyright
                     p &copy; 2023 Jim Lin-Dybner
-                    
