--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        title ${title} | Test Website
+        title #{title} | Test Website
         link(rel="stylesheet", href="/css/style.css")
     body 
         header.header
