new img added, styling adjustment

--- a/views/collection.pug
+++ b/views/collection.pug
@@ -13,6 +13,7 @@ block layout-content
                 https://pixabay.com/photos/rose-flower-petals-red-rose-320868/
                 https://pixabay.com/photos/flower-lily-lilium-candidum-729514/
                 https://pixabay.com/photos/poppy-flower-red-poppy-red-flower-3430058/
+                https://pixabay.com/photos/rose-flower-petal-floral-noble-3063284/
             img(src="/img/daisy.jpg", alt="daisy flower").collection-content__img
             img(src="/img/lotus.jpg", alt="lotus flower").collection-content__img
             img(src="/img/marigold.jpg", alt="marigold flower").collection-content__img
@@ -21,3 +22,4 @@ block layout-content
             img(src="/img/rose-red.jpg", alt="red rose flower").collection-content__img
             img(src="/img/lily.jpg", alt="lily flower").collection-content__img
             img(src="/img/poppy.jpg", alt="poppy flower").collection-content__img
+            img(src="/img/rose-orange.jpg", alt="orange rose flower").collection-content__img
