--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,5 +26,5 @@ html(lang="en")
                     p &copy; 
                         span.footer__copyright-yr
                         span.footer__copyright-txt  
-                            a(href="http://lindybner.com", target="_blank") Jim Lin-Dybner
+                            a(href="http://lindybner.com", target="_blank") Jim Lin-Dybner.
         script(src="/js/script.js") 
