--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,8 +58,8 @@ table {
     --color-primary: #fff;
     --color-secondary: #000;
     --color-tertiary: #bfbfbf;
-    --color-quaternary: #008080;
-    --color-quinary: #4aa3a3;
+    --color-quaternary: #870203;
+    --color-quinary: #872342;
 }
 
 html {
