--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,13 +11,17 @@ html(lang="en")
                 .header__site-name
                     a(href="/") The Flower Shop
                 .header__nav
+                    //- ul.nav
+                    //-     li.nav__navlink
+                    //-         a(href="/") Home
+                    //-     li.nav__navlink
+                    //-         a(href="/about") About
+                    //-     li.nav__navlink
+                    //-         a(href="/collection") Collection
                     ul.nav
-                        li.nav__navlink
-                            a(href="/") Home
-                        li.nav__navlink
-                            a(href="/about") About
-                        li.nav__navlink
-                            a(href="/collection") Collection
+                        each link in menu
+                            li 
+                                a(href=link.path) #{link.name}
         main.main
             block layout-content
         footer.footer
